--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,9 +25,19 @@ header {
   padding: 40px 60px 20px;
   text-align: center;
 }
+@media screen and (max-width: 420px) {
+  header {
+    padding: 40px 20px 20px;
+  }
+}
 header h1 {
   font-size: 2.4rem;
   margin-bottom: 25px;
+}
+@media screen and (max-width: 420px) {
+  header h1 {
+    font-size: 1.8rem;
+  }
 }
 header form input[type=text] {
   height: 40px;
@@ -40,12 +50,22 @@ header form input[type=text] {
   -webkit-transition: 0.1s ease-in;
   transition: 0.1s ease-in;
 }
+@media screen and (max-width: 420px) {
+  header form input[type=text] {
+    min-width: 140px;
+  }
+}
 header form input[type=text]:focus {
   border: 1px solid rgba(0, 132, 255, 0.6);
 }
 
 .meals-container {
   margin: 40px 60px 80px;
+}
+@media screen and (max-width: 420px) {
+  .meals-container {
+    margin: 10px 20px 80px;
+  }
 }
 .meals-container .meals {
   display: -webkit-box;
@@ -64,6 +84,16 @@ header form input[type=text]:focus {
       -ms-flex: 1;
           flex: 1;
   padding: 10px 10px 30px;
+}
+@media screen and (max-width: 420px) {
+  .meals-container .meals .meal {
+    min-width: 180px;
+  }
+}
+@media screen and (max-width: 280px) {
+  .meals-container .meals .meal {
+    min-width: 140px;
+  }
 }
 .meals-container .meals .meal .img-container {
   width: 100%;
